# TaskTuner

./: .gitignore  .prettierrc  README.md  bun.lockb  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
src/: App.css  App.tsx  index.tsx  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scraper.rs
src/Components/: ClassDrawer.tsx  ClassModal.tsx  DesktopSchedule.tsx  MobileSchedule.tsx  Nav.tsx  ScheduleCard.tsx
src/Routes/: 404.tsx  Assignments.tsx  DM.tsx  DashBoard.tsx  Diploma.tsx  Login.tsx  Schedule.tsx  Settings.tsx
src/Util/: constants.ts  createCalendarEvents.ts  getWeekNumber.ts
src/hooks/: useAuth.ts  useCheckClientInitialized.ts  useScheduleData.ts  useTheme.ts
src/lib/: Utils.ts
