[package]
name = "schooldayplanner"
version = "0.0.0"
description = "DashBoard for planning your school day"
authors = ["Mikkel M.H. Pedersen & Sebastian F. Stffensen"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "quantum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-plugin-shell = "2.0.0-alpha"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.23", features = ["blocking", "json", "cookies"] }
select = "0.6.0"
tauri-plugin-fs = "2.0.0-alpha"
scraper = "0.13.0"
chrono = "0.4.37"
regex = "1.10.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
