[package]
name = "tasktuner"
version = "0.0.0"
description = "Task Tuner"
authors = ["Mikkel M.H. Pedersen & Sebastian F. Stffensen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tasktuner_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.20", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.23", features = ["blocking", "json", "cookies"] }
select = "0.6.0"
tauri-plugin-fs = "2.0.0-alpha"
scraper = "0.13.0"
chrono = "0.4.37"
regex = "1.10.4"
lazy_static = "1.4.0"
anyhow = "1.0.82"
